[FIX] mass_mailing: text style dropup should be visible
Before this commit:

Text style and text size drop-up were not fully visible due to overflow.

After this commit:

Added a scroll property to give accessibility to the items.

--- a/addons/mass_mailing/static/src/scss/mass_mailing.ui.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.ui.scss
@@ -349,3 +349,7 @@ body.editor_enable.o_basic_theme.o_in_iframe {
         transform: translateX(0);
     }
 }
+#style.dropup .dropdown-menu, #font-size.dropup .dropdown-menu {
+    overflow-y: scroll;
+    max-height: 200px;
+}
